--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "echart": "^0.1.3",
+    "echarts": "^4.8.0",
+    "echarts-for-react": "^2.0.16",
     "eslint": "^6.6.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "3.0.3",
@@ -55,6 +57,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "reqwest": "^2.0.5",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
